cleaning up endpoint config styles. some alignment tweaks, added in collector icon in tags, ensureing both themes look consistent.

--- a/public/css/less/rt/components/buttons.less
+++ b/public/css/less/rt/components/buttons.less
@@ -17,6 +17,7 @@
   font-style: italic;
   font-weight: 400;
   font-size: 12px;
+  height:32px;
   border-radius: 2px;
   transition: 0.15s;
 
